syntax = "proto3";

package werewolf;

option go_package = "go_demo/pkg/werewolf";

// 游戏阶段（细分）
enum Phase {
  PHASE_WAITING = 0;
  PHASE_NIGHT_GUARD = 1; // 守卫行动
  PHASE_NIGHT_WEREWOLF = 2; // 狼人行动
  PHASE_NIGHT_WITCH = 3; // 女巫行动
  PHASE_NIGHT_SEER = 4; // 预言家行动
  PHASE_DAY_DISCUSSION = 5; // 白天讨论
  PHASE_DAY_VOTING = 6; // 投票
  PHASE_DAY_LAST_WORDS = 7; // 遗言
  PHASE_GAME_OVER = 8; // 游戏结束
}

// 游戏状态
enum GameState {
  WAITING = 0;
  NIGHT = 1;
  DAY = 2;
  FINISHED = 3;
}

// 玩家角色
enum Role {
  UNKNOWN = 0;
  WEREWOLF = 1;
  VILLAGER = 2;
  SEER = 3;
  WITCH = 4;
  HUNTER = 5;
  GUARD = 6;
}

// 阵营
enum Camp {
  CAMP_UNKNOWN = 0;
  CAMP_WEREWOLF = 1; // 狼人阵营
  CAMP_VILLAGER = 2; // 好人阵营
}

// 玩家信息
message Player {
  string player_id = 1;
  string name = 2;
  Role role = 3;
  Camp camp = 4;
  bool is_alive = 5;
  int32 position = 6;
  bool can_act = 7; // 当前是否可以行动
}

// 夜晚行动记录
message NightAction {
  string player_id = 1;
  Role role = 2;
  string target_id = 3;
  string action_type = 4;
  int64 timestamp = 5;
}

// 阶段信息
message PhaseInfo {
  Phase current_phase = 1;
  string phase_name = 2;
  repeated string active_roles = 3; // 当前阶段活跃的角色
  int32 time_limit = 4; // 阶段时间限制（秒）
  string description = 5;
}

// 创建游戏房间请求
message CreateRoomRequest {
  string room_name = 1;
  int32 max_players = 2;
  map<string, int32> role_config = 3;
}

message CreateRoomResponse {
  string room_id = 1;
  string message = 2;
}

// 加入房间请求
message JoinRoomRequest {
  string room_id = 1;
  string player_id = 2;
  string player_name = 3;
}

message JoinRoomResponse {
  bool success = 1;
  string message = 2;
  Player player = 3;
}

// 开始游戏请求
message StartGameRequest {
  string room_id = 1;
}

message StartGameResponse {
  bool success = 1;
  string message = 2;
  PhaseInfo phase_info = 3;
}

// 夜晚行动请求
message NightActionRequest {
  string room_id = 1;
  string player_id = 2;
  string target_player_id = 3;
  string action_type = 4;
}

message NightActionResponse {
  bool success = 1;
  string message = 2;
  string result = 3;
}

// 投票请求
message VoteRequest {
  string room_id = 1;
  string voter_id = 2;
  string target_id = 3;
}

message VoteResponse {
  bool success = 1;
  string message = 2;
}

// 获取游戏状态请求
message GetGameStateRequest {
  string room_id = 1;
  string player_id = 2;
}

message GetGameStateResponse {
  string room_id = 1;
  GameState state = 2;
  PhaseInfo phase_info = 3;
  repeated Player players = 4;
  int32 day_count = 5;
  Player current_player = 6; // 当前玩家的完整信息
}

// 游戏事件
message GameEvent {
  enum EventType {
    EVENT_UNKNOWN = 0;
    EVENT_PLAYER_JOINED = 1;
    EVENT_GAME_STARTED = 2;
    EVENT_PHASE_CHANGED = 3;
    EVENT_PLAYER_DIED = 4;
    EVENT_ACTION_COMPLETED = 5;
    EVENT_GAME_OVER = 6;
    EVENT_YOUR_TURN = 7; // 轮到你行动
  }
  
  EventType event_type = 1;
  string message = 2;
  PhaseInfo phase_info = 3;
  repeated Player affected_players = 4;
  int64 timestamp = 5;
  map<string, string> extra_data = 6;
}

// 狼人杀服务
service WerewolfService {
  rpc CreateRoom(CreateRoomRequest) returns (CreateRoomResponse);
  rpc JoinRoom(JoinRoomRequest) returns (JoinRoomResponse);
  rpc StartGame(StartGameRequest) returns (StartGameResponse);
  rpc NightAction(NightActionRequest) returns (NightActionResponse);
  rpc Vote(VoteRequest) returns (VoteResponse);
  rpc GetGameState(GetGameStateRequest) returns (GetGameStateResponse);
  rpc SubscribeGameEvents(GetGameStateRequest) returns (stream GameEvent);
}